testsuite/tests/indexed-types/should_fail/OverD.hs
module OverD where
import OverB
import OverC
